--- a/sdk/package.json
+++ b/sdk/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "SDK",
   "scripts": {
-    "start": "webpack-dev-server --config ./config/webpack.dev.config.js",
+    "start": "webpack-dev-server --config ./config/webpack.dev.config.js"
   },
   "devDependencies": {
-    
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
