--- a/client/package.json
+++ b/client/package.json
@@ -27,24 +27,18 @@
       "^.+\\.js$": "babel-jest"
     }
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/pwstrick/pwu.git"
-  },
   "author": "strick",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/pwstrick/pwu/issues"
-  },
-  "homepage": "https://github.com/pwstrick/pwu#readme",
   "dependencies": {
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "history": "^4.10.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "@types/html-webpack-plugin": "^3.2.2",
@@ -96,6 +90,9 @@
         }
       ],
       "@babel/preset-react"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-class-properties"
     ]
   },
   "browserslist": [
