--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "@types/react-dom": "^16.9.6",
     "antd": "^4.1.5",
     "cookie": "^0.4.1",
+    "echarts": "^4.7.0",
     "history": "^4.10.1",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
@@ -60,6 +61,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "file-loader": "^6.0.0",
+    "happypack": "^5.0.1",
     "html-webpack-plugin": "^4.2.0",
     "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
