--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "history": "^4.10.1",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
+    "prop-types": "^15.7.2",
     "querystring": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
