--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
+    "koa2-cors": "^2.0.6",
     "mongoose": "^5.9.10",
     "pm2": "^4.4.0",
     "pug": "^2.0.3",
