--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node bin/www",
     "dev": "cross-env NODE_ENV=development ./node_modules/.bin/nodemon bin/www",
-    "prd": "cross-env NODE_ENV=production pm2 start bin/www"
+    "prd": "cross-env NODE_ENV=production pm2 start bin/www",
+    "data": "cross-env NODE_ENV=development node bin/data.js"
   },
   "dependencies": {
     "acorn": "^7.1.1",
