initial performance analysis completed

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -12,7 +12,9 @@
     }],
     "indent": 0,
     "template-curly-spacing": 0,
-    "no-param-reassign": 0
+    "no-param-reassign": 0,
+    "no-plusplus": 0,
+    "no-underscore-dangle": 0
   },
   "env": {
     "browser": true
